Added missing images and ported additional 2.8 functionality.
git-svn-id: http://chianti.ucsd.edu/svn@22858 0ecc0d97-ab19-0410-9704-bfe1a75892f5